--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "@types/react-dom": "^18.2.17",
     "@types/uuid": "^9.0.7",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "autoprefixer": "^10.4.20",
+    "daisyui": "^4.12.23",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.8",
     "typescript": "^5.3.3",
     "vite": "^5.0.8"
   }
-} 
+}
