Categoryリポジトリを追加し、TodoServiceにカテゴリ管理機能を実装しました。また、インポートパスをエイリアスに変更しました。

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,18 @@
     "noFallthroughCasesInSwitch": true,
     "types": ["bun-types"],
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"],
+      "@domain/*": ["src/domain/*"],
+      "@application/*": ["src/application/*"],
+      "@infrastructure/*": ["src/infrastructure/*"],
+      "@presentation/*": ["src/presentation/*"],
+      "@contexts/*": ["src/contexts/*"],
+      "@constants/*": ["src/constants/*"],
+      "@components/*": ["src/components/*"]
+    }
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
