Vercel設定を更新し、ビルドコマンドをnpmに変更しました。また、tsconfig.jsonで型定義をnodeに変更し、vite.config.tsのエイリアスを修正しました。さらに、.gitignoreに.vercelを追加しました。

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "types": ["bun-types"],
+    "types": ["node"],
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "baseUrl": ".",
