--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "npm run dev",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
@@ -16,15 +16,15 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@types/node": "^22.13.5",
+    "@types/node": "^20.11.24",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@types/uuid": "^9.0.7",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
     "daisyui": "^4.12.23",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.8",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
     "vite": "^5.0.8"
   }
