--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,6 @@
     }
   ],
   "buildCommand": "npm run build",
-  "installCommand": "npm install",
+  "installCommand": "npm install --force",
   "framework": "vite"
 } 
