package.jsonとvercel.jsonを更新し、依存関係のバージョンを固定しました。また、Vercelのインストールコマンドを--legacy-peer-depsに変更し、ignoreCommandを追加しました。

--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,7 @@
     }
   ],
   "buildCommand": "npm run build",
-  "installCommand": "npm install --force",
-  "framework": "vite"
+  "installCommand": "npm install --legacy-peer-deps",
+  "framework": "vite",
+  "ignoreCommand": "bun -v"
 } 
