--- a/package.json
+++ b/package.json
@@ -9,23 +9,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@types/prismjs": "^1.26.5",
-    "prismjs": "^1.29.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "uuid": "^9.0.0"
+    "@types/prismjs": "1.26.5",
+    "prismjs": "1.29.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "uuid": "9.0.0"
   },
   "devDependencies": {
-    "@types/node": "^20.11.24",
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
-    "@types/uuid": "^9.0.7",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "autoprefixer": "^10.4.17",
-    "daisyui": "^4.12.23",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.0.2",
-    "vite": "^4.5.2"
+    "@types/node": "20.11.24",
+    "@types/react": "18.2.43",
+    "@types/react-dom": "18.2.17",
+    "@types/uuid": "9.0.7",
+    "@vitejs/plugin-react-swc": "3.5.0",
+    "autoprefixer": "10.4.17",
+    "daisyui": "4.12.23",
+    "postcss": "8.4.35",
+    "tailwindcss": "3.4.1",
+    "typescript": "5.0.2",
+    "vite": "4.5.2"
   }
 }
