package.jsonとvercel.jsonを更新し、TypeScriptとViteのバージョンをダウングレードしました。また、Vercelのインストールコマンドに--no-optionalオプションを追加し、ignoreCommandを修正しました。

--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
     }
   ],
   "buildCommand": "npm run build",
-  "installCommand": "npm install --legacy-peer-deps",
+  "installCommand": "npm install --legacy-peer-deps --no-optional",
   "framework": "vite",
-  "ignoreCommand": "bun -v"
+  "ignoreCommand": "exit 0"
 } 
