--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "daisyui": "4.12.23",
     "postcss": "8.4.35",
     "tailwindcss": "3.4.1",
-    "typescript": "5.0.2",
-    "vite": "4.5.2"
+    "typescript": "4.9.5",
+    "vite": "3.2.7",
+    "rollup": "2.79.1"
   }
 }
