--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,8 @@
       "source": "/(.*)",
       "destination": "/index.html"
     }
-  ]
+  ],
+  "buildCommand": "bun run build",
+  "installCommand": "bun install",
+  "framework": "vite"
 } 
