vercel.jsonのbuildCommandとinstallCommandをbunからnpmに変更しました。

--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
       "destination": "/index.html"
     }
   ],
-  "buildCommand": "bun run build",
-  "installCommand": "bun install",
+  "buildCommand": "npm run build",
+  "installCommand": "npm install",
   "framework": "vite"
 } 
