--- a/package.json
+++ b/package.json
@@ -20,14 +20,13 @@
     "@types/react": "18.2.43",
     "@types/react-dom": "18.2.17",
     "@types/uuid": "9.0.7",
-    "@vitejs/plugin-react-swc": "3.5.0",
+    "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "10.4.17",
     "daisyui": "4.12.23",
     "postcss": "8.4.35",
+    "rollup": "2.79.1",
     "tailwindcss": "3.4.1",
     "typescript": "4.9.5",
-    "vite": "4.5.0",
-    "rollup": "2.79.1"
+    "vite": "4.5.0"
   }
 }
-
