package.jsonに@vercel/ogを追加し、index.htmlにOpen Graphメタタグを追加しました。og.tsxを新規作成し、OG画像を生成するAPIを実装しました。

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/prismjs": "1.26.5",
+    "@vercel/og": "^0.6.5",
     "prismjs": "1.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
